# collector-sonar-check

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  dagster.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  env.example  main.py  manage.py  multi_syslog.py  pyproject.toml  requirements.txt  server.properties  setup.cfg  setup.py  syslog_socket.py  test.py
deploy/envs/dev/: values.yaml  values.yml
src/: db.yaml  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 6546eb22a4af_create_init_tables.py
src/apps/collector/: __init__.py  events_handler.py  parsers.py  (+2 more)
src/commons/: enums.py
src/config/: __init__.py  config.py
src/events_collector/: main.py
src/eventscollector/: main.py
src/intelhandler/: admin.py  apps.py  filters.py  forms.py  models.py  script.py  serializers.py  services.py  urls.py  views.py
src/models/: __init__.py  abstract.py  apps.py  base.py  feed.py  indicator.py  migrations.py  models.py  provider.py  services.py  tag.py
src/threatintel/: settings.py  urls.py  wsgi.py
src/worker/: client_syslog.py  collector_consumer.py  kafka_producer.py  services.py  syslog_producer.py  syslog_producer_client_test.py
threatintel/: Dockerfile
threatintel/intelhandler/: apps.py  constants.py  models.py  script.py  serializers.py  services.py  tests.py  urls.py  views.py
threatintel/threatintel/: settings.py  wsgi.py
threatintel/worker/: CollectorConsumer.py  apps.py  collector_consumer.py  cron_module.py  multi_producer.py  pattern_module.py  syslog_producer.py  syslog_socket_producer.py  tests.py  text.txt
(+48 files in other folders)
